CLIENT/CodeAssessMetadata/main/default/objects/CandidateMethodResult__c/CandidateMethodResult__c.object-meta.xml
<CustomObject>
    <description>The results of individual test method runs on a candidate&apos;s question result</description>
    <label>Candidate Method Result</label>
    <nameField>
        <displayFormat>Method Result {000000000}</displayFormat>
        <label>Candidate Method Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Method Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>