CLIENT/CodeAssessMetadata/main/default/objects/CandidateMethodResult__c/fields/CandidateQuestionResult__c.field-meta.xml
<CustomField>
    <fullName>CandidateQuestionResult__c</fullName>
    <label>Candidate Question Result</label>
    <referenceTo>CandidateQuestionResult__c</referenceTo>
    <relationshipLabel>Candidate Method Results</relationshipLabel>
    <relationshipName>Candidate_Method_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>