CLIENT/CodeAssessMetadata/main/default/objects/CandidateMethodResult__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>The outcome of the method run</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Method_Outcomes</valueSetName>
    </valueSet>
</CustomField>